# pytrip

./: .coveragerc  .deepsource.toml  .gitattributes  .gitignore  .gitmodules  .gitpod.yml  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  INSTALL  INSTALL.rst  LICENSE  MANIFEST.in  README  README.rst  __init__.py  appveyor.yml  install_deps.sh  install_versioneer.sh  plot_niemerko.py  plot_niemerko_v2.py  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  test.py  tox.ini  triptest.py  triptest_remote.py  wercker.yml
.github/: dependabot.yml
.github/workflows/: main.yml  python-app.yml  tests.yml  wheels.yml
.travis/: build_wheels.sh  deploy_package.sh  install_linux.sh  install_osx.sh  make_deb.sh  run_osx.sh  send_coverage.sh
appveyor/: deploy_package.sh  run_pip.py  run_with_env.cmd
branches/pytrip-GSI/: setup.py
branches/pytrip-GSI/pytrip/: ddd.py  test_ctx.py  test_let.py  test_paths.py  test_vdx.py  util.py
branches/pytrip-GSI/pytrip/res/: point.py
branches/pytrip-GSI/pytrip/tripexecuter/: dosecube.py
branches/pytrip-GSI/pytripgui/: closeobj.py  main.py  test.py  tripexecparser.py
branches/pytrip-GSI/pytripgui/dialogs/: progressdialog.py  tripexportcubedialog.py  tripexportdialog.py  triplogdialog.py
branches/pytrip-GSI/pytripgui/res/: gui.fbp  main.xrc
docs/: authors.rst  conf.py  contributing.rst  developer.rst  examples.rst  getting_started.rst  index.rst  install.rst  manipulating_cubes.rst  technical.rst  user_guide.rst
docs/apidoc/: modules.rst  pytrip.rst
examples/: example00_basic.py  example01_vdx.py  example02_trip98.py  example03_ddd.py  example03_dicom.py  example03_spc.py  trip98.py
pytrip/: __init__.py  _version.py  concave_tool.py  ctimage.py  ctx.py  ctx2.py  cube.py  ddd.py  dicomhelper.py  dos.py  error.py  field.py  file_parser.py  get_dvh.py  guiutil.py  header.py  hed.py  let.py  paths.py  pygtktrip.glade  raster.py  rst.py  spc.py  test_ctx.py  test_guiutil.py  test_let.py  test_paths.py  test_rst.py  test_vdx.py  util.py  vdx.py  vdx2.py  version.py  volhist.py
pytrip/dicom/: common.py  ct.py  dos.py
pytrip/dicompyler/plugins/LETPlot/: __init__.py
pytrip/dicompyler/plugins/TripExport/: __init__.py
pytrip/lib/: cntr.c  core.c  filter_point.c  setup.py  unused.c
pytrip/models/: __init__.py  aux.py  extra.py  proton.py  rcr.py  tcp.py
pytrip/res/: __init__.py  concave_tool.py  concave_tool_v2.py  contour.py  interpolate.py  intersection_tool.py  point.py  utils.py
pytrip/tripexecuter/: __init__.py  dosecube.py  execparser.py  execute.py  executor_logger.py  field.py  fieldcollection.py  kernel.py  plan.py  projectile.py  pytripobj.py  rbebasedata.py  rbehandler.py  tripexecuter.py  tripplan.py  tripplancollection.py  tripvoi.py  voi.py  voicollection.py
pytrip/tripexecuter2/: __init__.py  execute.py  field.py  plan.py  rbehandler.py
pytrip/utils/: bevlet2letoerdat.py  bevlet2oer.py  ctx2dicom.py  cubeslice.py  dddplot.py  dicom2trip.py  dos2dicom.py  dvhplot.py  gd2agr.py  gd2dat.py  rst2sobp.py  rst_plot.py  rst_read.py  slicedos.py  spc2pdf.py  trip2dicom.py  vdx2dicom.py
pytrip98/: run_pytrip98.py
pytripgui/: __init__.py  data.py  dose.py  leftmenu.py  main.py  rbehandler.py  settings.py  test.py
pytripgui/dialogs/: createcubedialog.py  createstructuredialog.py  dosedialog.py  fielddialog.py  plandialog.py  progressdialog.py  tripexportcubedialog.py  tripexportdialog.py  triplogdialog.py  tripvoidialog.py  voidialog.py
pytripgui/panels/: dvh.py  multidimplot.py  plotpanel.py
pytripgui/res/: gui.fbp.bak  panels.fbp  panels.xrc
scripts/example/: analyze.py  run.py
tags/oldPyTRiP/: README  gtrip  setup.py
tags/oldPyTRiP/pytrip/: dicomhelper.py  paths.py  pygtktrip.py
tags/pytrip-0.1.0/: TODO  example_mayavi.py
tags/pytrip-0.1.0/pytrip/: header.py  rst_plot.py
tags/pytrip-1.0.0-GSI/: README
tags/pytrip-1.0.0-GSI/pytrip/: ctimage.py  get_dvh.py  paths.py
tags/pytrip-1.0.0-GSI/pytrip/tripexecuter/: fieldcollection.py  pytripobj.py  rbehandler.py  tripexecuter.py  tripplan.py  voicollection.py
tags/pytrip-1.0.0-GSI/pytripgui/: TODO
tags/pytrip-1.0.0-GSI/pytripgui/dialogs/: fielddialog.py
tags/pytrip-1.0.0-GSI/scripts/: pytrip-gui
tests/: base.py  conftest.py  requirements-test.txt  test_base.py  test_converters.py  test_ctx.py  test_dos.py  test_exec.py  test_exec_250.py  test_exec_read.py  test_guiutil.py  test_help_and_version.py  test_interpolate.py  test_let.py  test_models.py  test_paths.py  test_plot.py  test_pytrip98.py  test_rst.py  test_vdx.py
tests/res/TRIP98BASE/: dummy00.rbe
tests/res/TST003/: README.md  TRiP98  tst003000.vdx  tst003001.bev.gd  tst003001.bevlet.gd  tst003001.dosemlet.hed  tst003001.hed  tst003001.rst  tst003012.bev.gd  tst003012.rst
tests/res/TST003/EXEC/: TST003000.exec  TST003001.exec  TST003012.exec  TST003016.exec  TST003101.exec
tests/res/dummy_TRiP98/: TRiP98
trunk/: LICENSE  README  setup.py
trunk/pytrip/: __init__.py  ctx.py  ctx2.py  cube.py  dicomhelper.py  dos.py  dos2.py  error.py  gd2dat.py  let.py  rst.py  test_ctx.py  test_guiutil.py  test_let.py  test_rst.py  vdx.py  vdx2.py
trunk/pytrip/dicompyler/plugins/LETPlot/: letplot.py  letplot.xrc
trunk/pytrip/dicompyler/plugins/TripExec/: TODO  __init__.py  letplot.py  letplot.xrc  tripexec.py  tripexec.xrc
trunk/pytrip/dicompyler/plugins/TripExport/: aptg_export.py  aptg_export.xrc
trunk/pytrip/lib/: filter_point.c
trunk/pytrip/res/: point.py  utils.py
trunk/pytrip/tripexecuter/: field.py  tripexecuter.py  tripplan.py  tripplancollection.py  voi.py
trunk/pytripgui/: LICENSE  data.py  dose.py  guihelper.py  leftmenu.py  plugin.py  rbehandler.py  util.py
trunk/pytripgui/dialogs/: __init__.py  createstructuredialog.py  plandialog.py  tripexportcubedialog.py  tripexportdialog.py  tripvoidialog.py  voidialog.py
trunk/pytripgui/panels/: 2dplot.py  __init__.py  plotpanel.py
trunk/pytripgui/res/: panels.fbp.bak
trunk/scripts/example/: run.py
trunk/utils/: bevlet2oer.py  jtrip.py  rst_read.py
utils/: gd2agr.py  rst2sobp.py  trip2dicom.py
(+15 files in other folders)
