[build-system]
requires = [
  "setuptools>=64",
  "wheel",
  "numpy>=2.0"
]
build-backend = "setuptools.build_meta"

[project]
name = "pytrip98"
description = "PyTRiP: Python tools for TRiP98 treatment planning and data handling"
readme = "README.rst"
license = { file = "GPL_LICENSE" }
authors = [
  { name = "Jakob Toftegaard" },
  { name = "Niels Bassler" },
  { name = "Leszek Grzanka", email = "leszek.grzanka@ifj.edu.pl" }
]
requires-python = ">=3.9"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Scientific/Engineering :: Medical Science Apps.",
  "Topic :: Scientific/Engineering :: Physics",
  "Environment :: Console",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: MacOS",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Programming Language :: C",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython"
]

dependencies = [
  "matplotlib",
  "pydicom",
  "scipy",
  "packaging",
  "numpy>=2.0"
]

[project.optional-dependencies]
remote = ["paramiko"]

[project.urls]
Homepage = "https://github.com/pytrip/pytrip"
Documentation = "https://pytrip.readthedocs.io/"
Source = "https://github.com/pytrip/pytrip"

[project.scripts]
trip2dicom = "pytrip.utils.trip2dicom:main"
dicom2trip = "pytrip.utils.dicom2trip:main"
cubeslice = "pytrip.utils.cubeslice:main"
rst2sobp = "pytrip.utils.rst2sobp:main"
rst_plot = "pytrip.utils.rst_plot:main"
bevlet2oer = "pytrip.utils.bevlet2oer:main"
gd2dat = "pytrip.utils.gd2dat:main"
gd2agr = "pytrip.utils.gd2agr:main"
spc2pdf = "pytrip.utils.spc2pdf:main"

[tool.cibuildwheel]
test-command = "python -c 'import pytrip; print(pytrip.__version__)'"
before-all = "pip install 'numpy>=2.0' && export CFLAGS=\"$CFLAGS -I$(python -c 'import numpy; print(numpy.get_include())')\""
archs = ["auto64"]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = "cp3??t-*"

[tool.cibuildwheel.environment]
# Ensure compile flags for position-independent code (already set in extensions, but redundant safety)
CFLAGS = "-fPIC"

[tool.setuptools]
# Exclude tests from the wheel
packages = { find = { exclude = ["tests", "tests.*"] } }
include-package-data = true
package-data = { pytrip = ["data/*.dat"] }
ext-modules = [
  { name = "pytrip.pytriplib", sources = ["pytrip/lib/core.c"], extra-compile-args=["-fPIC"] },
  { name = "pytrip._cntr", sources = ["pytrip/lib/cntr.c"], extra-compile-args=["-fPIC"] }
]


[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"
write_to = "pytrip/_version.py"